[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Cloud.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sound/cloud-hit.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/reached-50.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/build-fail-hit.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/gameplay-bg-music.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/death.mp3" type="AudioStream" id=10]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 44, 0, 0, 0, 0, 1025, 554 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Cloud = ExtResource( 3 )
Enemy = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 50, 260 )

[node name="CloudPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="CloudSpawnLocation" type="PathFollow2D" parent="CloudPath"]
position = Vector2( 1024, 44 )
rotation = 1.56883

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 1024, 44 )
rotation = 1.56883

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="GameplayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CloudHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Reached50" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BuildFailHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="cloud_hit" from="Player" to="." method="_on_Player_cloud_hit"]
[connection signal="enemy_hit" from="Player" to="." method="_on_Player_enemy_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_CloudTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
